# SharePoint-GPT-Middleware

./: !NOTES.md  .claudeignore  .gitignore  2024-12-30_TEST_SUMMARY.md  AddRemoveCrawlerPermissions.bat  AddRemoveCrawlerPermissions.ps1  AddRemoveCrawlerSharePointSites-V2-ServicePrincipal-ManagedIdentity.ps1  AddRemoveCrawlerSharePointSites.bat  AddRemoveCrawlerSharePointSites.ps1  CLAUDE.md  COMMON_UI_FUNCTIONS.md  COMMON_UI_FUNCTIONS_V1.md  CONFIGURE_CRAWLER.md  Claude.bat  CreateAzureAppService.ps1  CreateAzureWebApp.ps1  CreateSelfSignedCertificateRunAsAdmin.bat  DATA_RETENTION.md  DATA_SOURCES.md  DeleteAzureAppService.ps1  DeleteAzureWebApp.bat  DeleteAzureWebApp.ps1  DeployAzureAppService.bat  DeployAzureAppService.ps1  DeployAzureWebApp.ps1  FAILS.md  ID-REGISTRY.md  InstallAndCompileDependencies.bat  KNOWN_PROBLEMS_AND_FIXES.md  MANUAL_SETUP.md  PERSISTENT_STORAGE_STRUCTURE.md  README.md  SECURE_AZURE_APP_SERVICE.md  SOPS.md  SRS.md  Windsurf.bat  _CODEGEN_MODEL_PERFORMANCE.md  _NEW_PYTHON_RULES.md  _PROPOSED_SPEC_RULES_UPDATE.md  _V0_CRAWLER_TOOLKIT.md  (+41 more)
.test-summaries/: 2025-12-30_11-35_TEST_SUMMARY.md  (+15 more)
src/: README.md  app.py  common_crawler_functions.py  common_job_functions.py  common_openai_functions.py  common_sharepoint_functions.py  common_utils.py  hardcoded_config.py  logging_v2.py  openai_backendtools.py  pyproject.toml  requirements.txt  streaming_jobs_v2.py  test_access_with_api_key.py  test_access_with_service_principal.py  test_sharepoint_access_with_app_registration.py  utils.py
src/html_javascript_static_files/css/: routers_v1.css  styles.css
src/pocs/permission_scanner/: 00_validate_prerequisites.py  02A_test_poc_core_functionality.py
src/routers/: crawler.py  domains.py  inventory.py  openai_proxy.py  sharepoint_search.py  sharpoint_search.py  testrouter.py  testrouter2.py  testrouter3.py
src/routers_static/: openai_proxy.py  sharepoint_search.py
src/routers_v1/: common_job_functions.py  common_job_functions_v1.py  common_logging_functions_v1.py  common_openai_functions_v1.py  common_sharepoint_functions_v1.py  common_ui_functions.py  common_ui_functions_v1.py  crawler.py  domains.py  inventory.py  openai_proxy.py  router_crawler_functions.py  router_crawler_functions_v1.py  testrouter.py  testrouter2.py  testrouter3.py
src/routers_v2/: common_crawler_functions_v2.py  common_embed_functions_v2.py  common_job_functions_v2.py  common_logging_functions_v2.py  common_map_file_functions_v2.py  common_openai_functions_v2.py  common_report_functions_v2.py  common_report_functions_v2_test.py  common_security_scan_functions_v2.py  common_sharepoint_functions_v2.py  common_sharepoint_functions_v2_test.py  common_ui_functions_v2.py  crawler.py  demorouter.py  demorouter1.py  demorouter2.py  domains.py  jobs.py  reports.py  router_job_functions.py  sites.py
src/routers_v2a/: demorouter.py  router_job_functions.py
src/routers_v2b/: demorouter.py  router_job_functions.py
src/static/css/: routers_v1.css  routers_v2.css  styles.css
src/static/js/: htmx.min.js
(+662 files in other folders)
