[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sharepoint-gpt-middleware"
version = "0.1.0"
description = "An Azure Web App in Python to crawl the content of SharePoint sites and perform semantic search using OpenAI Vector Stores."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Karsten Held" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "cryptography==43.0.3",
  "azure-identity",
  "requests",
  "python-dotenv",
  "openai",
  "azure-keyvault-secrets",
  "aiohttp",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "ruff>=0.5"
]

# Single-module layout (app.py in this folder)
[tool.hatch.build.targets.wheel.force-include]
"app.py" = "app.py"

[tool.hatch.build.targets.sdist]
include = [
  "**",
  "README.md",
  "pyproject.toml"
]

[tool.ruff]
line-length = 200
