[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sharepoint-gpt-middleware"
version = "0.1.0"
description = "An Azure Web App in Python to crawl the content of SharePoint sites and perform semantic search using OpenAI Vector Stores."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Karsten Held" }]
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "azure-identity==1.15.0",
  "Office365-REST-Python-Client==2.6.2",
  "cryptography==41.0.7",
  "python-dotenv==1.1.1",
  "openai==2.8.0",
  "python-multipart==0.0.20",
  "httpx==0.28.1",
  "aiohttp==3.12.15",
  "msgraph-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "ruff>=0.5"
]

# Single-module layout (app.py in this folder)
[tool.hatch.build.targets.wheel.force-include]
"app.py" = "app.py"

[tool.hatch.build.targets.sdist]
include = [
  "**",
  "README.md",
  "pyproject.toml"
]

[tool.ruff]
line-length = 200
